Update Section 3.qmd - email address

--- a/Section 3.qmd
+++ b/Section 3.qmd
@@ -97,7 +97,7 @@ So, how could you evidence your 'best' publications? 
 
 When using metrics to assess research or during an application you should approach your task with as much rigour and mindfulness of methodology as you would when you undertake your own research practices. The answer you will get will depend on the questions you ask. It should be clear as to how you have come to your conclusions so that your analysis is rigorous and reproducible.
 
-Thank you for taking the time to complete this section of the course. If you need additional help and support with your own applications please contact the [metrics service](https://library.soton.ac.uk/bibliometrics/services){target="_blank"} for support.
+Thank you for taking the time to complete this section of the course. If you need additional help and support with your own applications please contact us via ressup@essex.ac.uk for support.
 
 ### **What’s next?**
 
